[package]
name = "zigup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
home = "0.5"
http = "1.3"
indexmap = { version = "2.9", features = ["serde"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
ureq = { version = "3.0", features = ["json"] }
xz2 = "0.1"
zip = "2.6"
